--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "cub3d.h": "c",
         "mlx42.h": "c",
         "libft.h": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "constants.h": "c"
     }
 }
